# coralpages

./: .gitignore  .gitlab-ci.yml  CSS_SYSTEM.md  Cargo.toml  Dockerfile  Dockerfile.rust  Makefile  README.md  config.yaml  css_demo_output.html  output.html  pyproject.toml  render.py  render2.py  run.sh  serve.py  serve2.py  test_async_http.py  test_output.html  test_output_markdown.html  test_output_markdown_uv.html  test_output_menu.html  test_output_simple_markdown.html  test_output_simple_markdown_uv.html  test_output_template.html  test_simple.py  test_system.py
.github/workflows/: build-and-test.yaml
builtin/: config.yaml
builtin/button/: view.html
builtin/children/: editor.html
builtin/classes/: animation-bounce.yaml  animations.yaml  background.yaml  cards.yaml  columns.yaml  config.yaml  shadow.yaml  text.yaml
builtin/div/: style.css  style.css.j2
builtin/error/: view.html
builtin/form/: form.html  input.html
builtin/graphs/: config.yaml
builtin/header/: style.css  view.html
builtin/image/: style.css  view.html
builtin/markdown/: style.css  view.html
data/: pe.db
docs/: _base.html  _default.yaml  _default_embed.yaml  api-reference.yaml  architecture.yaml  components.yaml  configuration.yaml  css.yaml  editor-interface.yaml  examples.yaml  external-api.yaml  getting-started.yaml  index.yaml  local-development.yaml  login.yaml  osm.yaml
pe/: adapters.py  api.py  config.py  css_generator.py  loader.py  main.py  page.py  ports.py  renderer.py  server.py  services.py  setup.py  template_loader.py  types.py
pe2/: loader.py  types.py
src/: config.rs  lib.rs  main.rs  restart.rs  server.rs  types.rs  utils.rs
test_pages/: _plain.yaml  about.yaml  css_demo.yaml  index.yaml  markdown_demo.yaml  simple_markdown.yaml
tests/: base.py  test_renderer.py  test_stores.py
(+116 files in other folders)
