[package]
name = "page-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
anyhow = "1.0"
serde_yaml = "0.9.34"
clap = { version = "4.0", features = ["derive"] }
minijinja = "2.12.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
pulldown-cmark = "0.13.0"
