[package]
name = "coralpages"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
anyhow = "1.0"
serde_yaml = "0.9.34"
clap = { version = "4.0", features = ["derive"] }
minijinja = { version="2.12.0", features = ["builtins", "json", "urlencode"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
pulldown-cmark = "0.13.0"
tokio = { version = "1.0", features = ["full", "signal"] }
poem = "3.1.12"
poem-openapi = { version = "5.1.16", features = ["swagger-ui"] }
ctor = "0.5.0"
sqlx = { version= "0.8.6", features = ["sqlite", "runtime-tokio"]}
once_cell = "1.19"
notify = "6.1"
tempfile = "3.8"
reqwest = "0.12.23"
redis = { version = "0.32.5", features = ["tokio-comp"] }
